package fr.lo02.antoineD.PocketImperium;

public class BorderSector extends Sector{
    public BorderSector(Tile[] sectorTiles, int[] sectorPattern, int sectorIndex) {
        super(sectorTiles, sectorPattern, sectorIndex);
    }

    public Player[] getTileOccupants() {
        return null;
    }

    public Tile[] generateTiles() {
        return null;
    }
}
