package fr.lo02.antoineD.PocketImperium;

public class DataGestion {
    public void loadGame(){

    }

    public void saveGame(String[] file){

    }

    public void deleteGame(){

    }

    public Game jsonToGame(String[] file){
        return null;
    }

    public void gameToJson(Game game){

    }

}
