package fr.lo02.antoineD.PocketImperium;

public class Game {
    private int firstPlayerIndex;
    private int[] players;
    private Tile[] tiles;

    public Game(int firstPlayerIndex){

    }

    public void startGame(){

    }

    public void chooseAction(){

    }

    public void executeAction(){

    }

    public void supplyShip(){

    }

    public void countPoints(){

    }

    public void nextRound(){

    }

    public void endGame(){

    }

}
