package fr.lo02.antoineD.PocketImperium;

public class MiddleSector extends Sector{
    public MiddleSector(Tile[] sectorTiles, int[] sectorPattern, int sectorIndex) {
        super(sectorTiles, sectorPattern, sectorIndex);
    }

    public Player[] getTileOccupants() {
        return null;
    }

    public Tile[] generateTiles() {
        return null;
    }
}
